finishing case duo

--- a/guides/duo-guide-refactor.html
+++ b/guides/duo-guide-refactor.html
@@ -115,8 +115,19 @@ body { padding-top: 100px; }
 
  
 <h3>Enroll an Authentication Device in DUO Security</h3>
+<p>Case Duo supports a range of electronic devices including;</p>
+<p>&nbsp;</p>
+  <ul>
+    <li>iOS smartphones and tablets</li>
+    <li>Android smartphones and tablets</li>
+    <li>Blackberry devices</li>
+    <li>Windows phones</li>
+    <li>Basic cell phones with and without text msg capabilities</li>
+    <li>Landlines, Softphones, etc.</li>
+    <li>Hardware tokens (e.g., Yubikey)</li>
+  </ul>
 
-
+<p>&nbsp;</p>
 <div class="row">
 <div class="col-md-12 col-sm-12">
   <div class="panel panel-default">
@@ -278,17 +289,7 @@ body { padding-top: 100px; }
 <!-- New content arrangement -- Authenticate by Device -->
 
 <h3>Authenticate with a Supported Device</h3>
-<p>Case Duo supports a range of electronic devices including;<br>
-&nbsp;</p>
-  <ul>
-    <li>iOS smartphones and tablets</li>
-    <li>Android smartphones and tablets</li>
-    <li>Blackberry devices</li>
-    <li>Windows phones</li>
-    <li>Basic cell phones with and without text msg capabilities</li>
-    <li>Landlines, Softphones, etc.</li>
-    <li>Hardware tokens (e.g., Yubikey)</li>
-  </ul>
+
 <p>Review the table below to identify what methods of authentication your enrolled devices support. Then, follow the instructions to authenticate a VPN session.</p>
 <p>&nbsp;</p>
 
