--- a/guides/duo-guide-refactor.html
+++ b/guides/duo-guide-refactor.html
@@ -82,12 +82,12 @@ body { padding-top: 100px; }
     <p>Self enrollment is available via multiple methods. Information Security recommends all users enroll the following two devices:</p>
     <ul>
       <li>Smartphone using the mobile application for iOS or Android</li>
-      <li>Desk phone (landline) using the voice call method<br>
-      <p>&nbsp;</p>    
-      <p><strong>NOTE:</strong> ITS Information Security recommends you use your desk phone as a backup in the case that a mobile phone is lost, stolen or damaged. However, because Case Duo lets you link multiple devices to your account, you may use any combination of compatible devices (e.g., a landline and a hardware token, two different mobile devices, tablet and a lanline, etc.)</p></li>
+      <li>Desk phone (landline) using the voice call method</li>
     </ul>
 
-    <p><strong>No mobile phone?</strong> </p>
+  <p>&nbsp;</p>    
+  <p><strong>NOTE:</strong> ITS Information Security recommends you use your desk phone as a backup in the case that a mobile phone is lost, stolen or damaged.</p> 
+  <p>However, because Case Duo lets you link multiple devices to your account, you may use any combination of compatible devices (e.g., a landline and a hardware token, two different mobile devices, tablet and a lanline, etc.)</p>
   </div>
 </div>
 
