--- a/guides/duo-guide-refactor.html
+++ b/guides/duo-guide-refactor.html
@@ -87,7 +87,7 @@ body { padding-top: 100px; }
 
   <p>&nbsp;</p>    
   <p><strong>NOTE:</strong> ITS Information Security recommends you use your desk phone as a backup in the case that a mobile phone is lost, stolen or damaged.</p> 
-  <p>However, because Case Duo lets you link multiple devices to your account, you may use any combination of compatible devices (e.g., a landline and a hardware token, two different mobile devices, tablet and a lanline, etc.)</p>
+  <p>However, because Case Duo lets you link multiple devices to your account, you may use any combination of compatible devices (e.g., a landline and a hardware token, two different mobile devices, tablet and a landline, etc.)</p>
   </div>
 </div>
 
@@ -102,9 +102,9 @@ body { padding-top: 100px; }
       
   <div id="additional-resources" class="panel-body">
     <ul>
-      <li>Infosec link</li>
+      <li><a href="https://webapps.case.edu/duo/webauth.py">Case Duo Self-Enrollment tool</a></li>
+      <li><a href="https://www.case.edu/its/information-security/">ITS Information Security home page</a></li>
       <li><a href="http://www.lynda.com/1Password-tutorials/Computer-Security-Internet-Safety-Fundamentals/174234-2.html?org=case.edu">Computer Security and Internet Safety Fundamentals (Lynda.com) [video]</a></li>
-      <li><a href="#">Common Issues</a></li>
     </ul>
     <p>For more help, call Service Desk at <a href="tel:1-216-368-4357">(216) 368-<strong>HELP</strong> (4357)</a>.</p>
   </div>
