--- a/guides/duo-guide-refactor.html
+++ b/guides/duo-guide-refactor.html
@@ -295,8 +295,8 @@ body { padding-top: 100px; }
 <table class="table table-striped table-condensed">
 <thead>
   <tr>
-    <th rowspan="2"><span style="font-weight:normal;">Device</span></th>
-    <th><span style="font-weight:normal; color=white;">Method</span></th>
+    <th><span style="font-weight:normal;">Device</span></th>
+    <th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
     <th>Duo Push *</th>
     <th>Passcode</th>
     <th>Voice Call</th>
