--- a/guides/duo-guide-refactor.html
+++ b/guides/duo-guide-refactor.html
@@ -123,7 +123,7 @@ body { padding-top: 100px; }
     <li>Windows phones</li>
     <li>Basic cell phones with and without text msg capabilities</li>
     <li>Landlines, Softphones, etc.</li>
-    <li>Hardware tokens (e.g., Yubikey)</li>
+    <li>Hardware tokens (e.g., Yubikey - enrolled by administrator)</li>
   </ul>
 
 <p>&nbsp;</p>
