--- a/guides/duo-guide-refactor.html
+++ b/guides/duo-guide-refactor.html
@@ -106,7 +106,7 @@ body { padding-top: 100px; }
       <li><a href="https://www.case.edu/its/information-security/">ITS Information Security home page</a></li>
       <li><a href="http://www.lynda.com/1Password-tutorials/Computer-Security-Internet-Safety-Fundamentals/174234-2.html?org=case.edu">Computer Security and Internet Safety Fundamentals (Lynda.com) [video]</a></li>
     </ul>
-    <p>For more help, call Service Desk at <a href="tel:1-216-368-4357">(216) 368-<strong>HELP</strong> (4357)</a>.</p>
+    <p>For more help, call the Service Desk at <a href="tel:1-216-368-4357">(216) 368-<strong>HELP</strong> (4357)</a>.</p>
   </div>
 </div>
 
