--- a/guides/als-draft.html
+++ b/guides/als-draft.html
@@ -89,15 +89,15 @@ body { padding-top: 100px; }
     </div>
       <div id="turn-on" class="panel-body" style="display:none">
         <ol>
-          <li>Using the control touch panel at the far right of the room, find the power icon and tap [on text]
+          <li>Using the control touch panel at the far right of the room, find the power icon and tap it.
           <p>&nbsp;</p>
             <div class="row">
             <div class="col-lg-8 col-md-8 col-sm-10 col-xs-10">
-              <img src="http://static4.wikia.nocookie.net/__cb20120815003918/adventuretimewithfinnandjake/images/8/80/Troll-face-problem.jpg" class="img-responsive"></div></div><p>&nbsp;</p></li>
+              <img src="/images/bingham-204-control.jpg" class="img-responsive"></div></div><p>&nbsp;</p></li>
           <li>Presenter and participant stations turn on.</li>
           <li>Individual input devices (e.g., document camera, media players, etc.) power on or return from standby when selected as input.
           <p>&nbsp;</p>
-          <p><strong>NOTE:</strong> To turn the room off, find the power icon and tap it again.</p></li>
+          <p><strong>NOTE:</strong> To turn the room off, find the control labelled ".</p></li>
         </ol>
       </div>
     </div>
@@ -122,7 +122,7 @@ body { padding-top: 100px; }
           <p>&nbsp;</p>
             <div class="row">
             <div class="col-lg-8 col-md-8 col-sm-10 col-xs-10">
-              <img src="http://static4.wikia.nocookie.net/__cb20120815003918/adventuretimewithfinnandjake/images/8/80/Troll-face-problem.jpg" class="img-responsive"></div></div><p>&nbsp;</p></li>
+              <img src="/images/bingham-204-control.jpg" class="img-responsive"></div></div><p>&nbsp;</p></li>
           <li>Optionally, to set a presenter monitor, drag presentation source to the center station at the rear of the room.</li>
         </ol>
       </div>
@@ -147,7 +147,7 @@ body { padding-top: 100px; }
           <p>&nbsp;</p>
             <div class="row">
             <div class="col-lg-8 col-md-8 col-sm-10 col-xs-10">
-              <img src="http://static4.wikia.nocookie.net/__cb20120815003918/adventuretimewithfinnandjake/images/8/80/Troll-face-problem.jpg" class="img-responsive"></div></div><p>&nbsp;</p></li>
+              <img src="/images/bingham-204-control.jpg" class="img-responsive"></div></div><p>&nbsp;</p></li>
           <li>To show at all stations, drag to 'all stations'.</li>
           <li>To show at all stations and on the projection screens, drag to 'all displays'.</li>
         </ol>
@@ -167,7 +167,7 @@ body { padding-top: 100px; }
 </div>
 
 
-<h3>Glossary</h3>
+<!-- <h3>Glossary</h3>
 
 <div class="row">
 
@@ -214,7 +214,7 @@ body { padding-top: 100px; }
       </dl>
     </div>
   </div>
-</div>
+</div> -->
 
 </div>
 
