--- a/guides/als-draft.html
+++ b/guides/als-draft.html
@@ -147,7 +147,7 @@ body { padding-top: 100px; }
           <p>&nbsp;</p>
             <div class="row">
             <div class="col-lg-8 col-md-8 col-sm-10 col-xs-10">
-              <img src="/images/bingham-204-control.jpg" class="img-responsive"></div></div><p>&nbsp;</p></li>
+              <img src="\images\bingham-204-control.jpg" class="img-responsive"></div></div><p>&nbsp;</p></li>
           <li>To show at all stations, drag to 'all stations'.</li>
           <li>To show at all stations and on the projection screens, drag to 'all displays'.</li>
         </ol>
@@ -162,7 +162,7 @@ body { padding-top: 100px; }
 <div id="advanced" class="row">
 <div class="col-md-12 col-sm-12">
 <p>Call the ITS Service Desk at <a href="tel:216-368-4357"><strong>(216) 368-4357</strong> (click to call)</a> for more help. A white service phone is mounted to the presenter's station for your convenience.</p>
-<p>Learn more about the <a href="https://www.case.edu/its/academic-technology/">ITS Academic Technologies team</a> and its institutional partners.</p>
+<p>Learn more about <a href="https://www.case.edu/its/academic-technology/"><strong>ITS Academic Technologies</strong></a> and its institutional partners.</p>
 </div>
 </div>
 
