edits for ALS draft

--- a/guides/als-draft.html
+++ b/guides/als-draft.html
@@ -93,7 +93,7 @@ body { padding-top: 100px; }
           <p>&nbsp;</p>
             <div class="row">
             <div class="col-lg-8 col-md-8 col-sm-10 col-xs-10">
-              <img src="/images/bingham-204-control.jpg" class="img-responsive"></div></div><p>&nbsp;</p></li>
+              <img src="http://robotcomm.github.io/images/bingham-204-control.jpg" class="img-responsive"></div></div><p>&nbsp;</p></li>
           <li>Presenter and participant stations turn on.</li>
           <li>Individual input devices (e.g., document camera, media players, etc.) power on or return from standby when selected as input.
           <p>&nbsp;</p>
