edits for ALS draft

--- a/guides/als-draft.html
+++ b/guides/als-draft.html
@@ -93,7 +93,7 @@ body { padding-top: 100px; }
           <p>&nbsp;</p>
             <div class="row">
             <div class="col-lg-8 col-md-8 col-sm-10 col-xs-10">
-              <img src="http://robotcomm.github.io/images/als/als-bing-204.png" class="img-responsive"></div></div><p>&nbsp;</p></li>
+              <img src="https://04a4fd5b8e9010ec524923a293510c973c1291c9.googledrive.com/host/0B5e4Smfyuda_d01lc0xUQmJURWc/ALS/als-bing-204.png" class="img-responsive"></div></div><p>&nbsp;</p></li>
           <li>Presenter and participant stations turn on.</li>
           <li>Individual input devices (e.g., document camera, media players, etc.) power on or return from standby when selected as input.
           <p>&nbsp;</p>
@@ -122,7 +122,7 @@ body { padding-top: 100px; }
           <p>&nbsp;</p>
             <div class="row">
             <div class="col-lg-8 col-md-8 col-sm-10 col-xs-10">
-              <img src="/images/als/als-bing-204.png" class="img-responsive"></div></div><p>&nbsp;</p></li>
+              <img src="https://04a4fd5b8e9010ec524923a293510c973c1291c9.googledrive.com/host/0B5e4Smfyuda_d01lc0xUQmJURWc/ALS/als-bing-204.png" class="img-responsive"></div></div><p>&nbsp;</p></li>
           <li>Optionally, to set a presenter monitor, drag presentation source to the center station at the rear of the room.</li>
         </ol>
       </div>
@@ -147,7 +147,7 @@ body { padding-top: 100px; }
           <p>&nbsp;</p>
             <div class="row">
             <div class="col-lg-8 col-md-8 col-sm-10 col-xs-10">
-              <img src="\images\bingham-204-control.jpg" class="img-responsive"></div></div><p>&nbsp;</p></li>
+              <img src="https://04a4fd5b8e9010ec524923a293510c973c1291c9.googledrive.com/host/0B5e4Smfyuda_d01lc0xUQmJURWc/ALS/als-bing-204.png" class="img-responsive"></div></div><p>&nbsp;</p></li>
           <li>To show at all stations, drag to 'all stations'.</li>
           <li>To show at all stations and on the projection screens, drag to 'all displays'.</li>
         </ol>
