edits for ALS draft

--- a/guides/als-draft.html
+++ b/guides/als-draft.html
@@ -89,15 +89,16 @@ body { padding-top: 100px; }
     </div>
       <div id="turn-on" class="panel-body" style="display:none">
         <ol>
-          <li>Using the control touch panel at the far right of the room, find the power icon and tap it.
+          <li>Using the control touch panel, find the power icon or button labelled <strong>Start</strong> and tap it.
+          <li>Individual input devices (e.g., document camera, media players, etc.) power on or return from standby when selected as input.
+          <p>&nbsp;</p>
+          <p><strong>NOTE:</strong> To turn the room off, find the control labelled <strong>Quit/Shutdown</strong> and tap it.</p>
           <p>&nbsp;</p>
             <div class="row">
             <div class="col-lg-8 col-md-8 col-sm-10 col-xs-10">
-              <img src="https://04a4fd5b8e9010ec524923a293510c973c1291c9.googledrive.com/host/0B5e4Smfyuda_d01lc0xUQmJURWc/ALS/als-bing-204.png" class="img-responsive img-rounded"></div></div><p>&nbsp;</p></li>
-          <li>Presenter and participant stations turn on.</li>
-          <li>Individual input devices (e.g., document camera, media players, etc.) power on or return from standby when selected as input.
-          <p>&nbsp;</p>
-          <p><strong>NOTE:</strong> To turn the room off, find the control labelled ".</p></li>
+              <img src="https://04a4fd5b8e9010ec524923a293510c973c1291c9.googledrive.com/host/0B5e4Smfyuda_d01lc0xUQmJURWc/ALS/als-bing-204-power.png" class="img-responsive img-rounded"></div></div><p>&nbsp;</p></li>
+      
+          
         </ol>
       </div>
     </div>
@@ -116,14 +117,17 @@ body { padding-top: 100px; }
     </div>
       <div id="present" class="panel-body" style="display:none">
         <ol>
-          <li>Choose your presentation source using the control application at the presenter station.</li>
+          <li>Choose a presentation source from the options shown at the bottom of the control touch panel.</li>
+          <li>Swipe left or right to show more options.</li>
           <li>If you're using a laptop or external source, connect it now.</li>
           <li>Drag your selected source to the front display(s) to start the projection system.
+          <p>&nbsp;</p>
+          <p><strong>NOTE:</strong> Projector screen is represented at the <strong>top</strong> of the control panel and distinguished by the label "main" (main left and main right for rooms with dual projection).</p>
           <p>&nbsp;</p>
             <div class="row">
             <div class="col-lg-8 col-md-8 col-sm-10 col-xs-10">
               <img src="https://04a4fd5b8e9010ec524923a293510c973c1291c9.googledrive.com/host/0B5e4Smfyuda_d01lc0xUQmJURWc/ALS/als-bing-204.png" class="img-responsive img-rounded"></div></div><p>&nbsp;</p></li>
-          <li>Optionally, to set a presenter monitor, drag presentation source to the center station at the rear of the room.</li>
+          <li>Optionally, to set a presenter monitor, drag your presentation source to a pod at the bottom and center of control touch panel. Make sure that to face the selected pod toward the front of the room.</li>
         </ol>
       </div>
     </div>
@@ -142,14 +146,15 @@ body { padding-top: 100px; }
     </div>
       <div id="share" class="panel-body" style="display:none">
         <ol>
-          <li>Using the control touch pad or control application, choose any input source shown at the bottom the screen.</li>
+          <li>Choose a presentation source from the options shown at the bottom of the control touch panel.</li>
+          <li>Swipe left or right to show more options.</li>
           <li>Touch the device name to select it, then drag it to the station where you want it to display.
           <p>&nbsp;</p>
             <div class="row">
             <div class="col-lg-8 col-md-8 col-sm-10 col-xs-10">
-              <img src="https://04a4fd5b8e9010ec524923a293510c973c1291c9.googledrive.com/host/0B5e4Smfyuda_d01lc0xUQmJURWc/ALS/als-bing-204.png" class="img-responsive img-rounded"></div></div><p>&nbsp;</p></li>
-          <li>To show at all stations, drag to 'all stations'.</li>
-          <li>To show at all stations and on the projection screens, drag to 'all displays'.</li>
+              <img src="https://04a4fd5b8e9010ec524923a293510c973c1291c9.googledrive.com/host/0B5e4Smfyuda_d01lc0xUQmJURWc/ALS/als-bing-204-assign-all.png" class="img-responsive img-rounded"></div></div><p>&nbsp;</p></li>
+          <li>To assign a source to all pods simultaneously, drag to source to the box labelled <STRONG>ALL PODS</STRONG>.</li>
+          <li>To assign a source to all pods simultaneously and also display the same on the front projection screen(s), drag the source to the box labelled <strong>ALL DISPLAYS</strong>.</li>
         </ol>
       </div>
     </div>
