edits for ALS draft

--- a/guides/als-draft.html
+++ b/guides/als-draft.html
@@ -72,7 +72,7 @@ body { padding-top: 100px; }
 
 
 <button onclick="javascript:window.print()" type="button" class="btn btn-default hidden-xs"><span class="glyphicon glyphicon-print"></span> Print</button>
-<button onclick="TogetherJS(this); return false;" type="button" class="btn btn-default"><span class="glyphicon glyphicon-user"></span> Live Help</button>
+<!-- <button onclick="TogetherJS(this); return false;" type="button" class="btn btn-default"><span class="glyphicon glyphicon-user"></span> Live Help</button> -->
 
 <p>&nbsp;</p>
 
@@ -127,7 +127,8 @@ body { padding-top: 100px; }
             <div class="row">
             <div class="col-lg-8 col-md-8 col-sm-10 col-xs-10">
               <img src="https://04a4fd5b8e9010ec524923a293510c973c1291c9.googledrive.com/host/0B5e4Smfyuda_d01lc0xUQmJURWc/ALS/als-bing-204.png" class="img-responsive img-rounded"></div></div><p>&nbsp;</p></li>
-          <li>Optionally, to set a presenter monitor, drag your presentation source to a pod at the bottom and center of control touch panel. Make sure that to face the selected pod toward the front of the room.</li>
+          <li>Optionally, to set a presenter monitor, drag your presentation source to a pod at the bottom and center of control touch panel. Make sure that to face the selected pod toward the front of the room.
+          <p>Call the ITS Service Desk at (216) 368<strong>HELP</strong> (4357) if you need help repositioning equipment.</p></li>
         </ol>
       </div>
     </div>
