edits for ALS draft

--- a/guides/als-draft.html
+++ b/guides/als-draft.html
@@ -92,13 +92,11 @@ body { padding-top: 100px; }
           <li>Using the control touch panel, find the power icon or button labelled <strong>Start</strong> and tap it.
           <li>Individual input devices (e.g., document camera, media players, etc.) power on or return from standby when selected as input.
           <p>&nbsp;</p>
-          <p><strong>NOTE:</strong> To turn the room off, find the control labelled <strong>Quit/Shutdown</strong> and tap it.</p>
-          <p>&nbsp;</p>
             <div class="row">
             <div class="col-lg-8 col-md-8 col-sm-10 col-xs-10">
               <img src="https://04a4fd5b8e9010ec524923a293510c973c1291c9.googledrive.com/host/0B5e4Smfyuda_d01lc0xUQmJURWc/ALS/als-bing-204-power.png" class="img-responsive img-rounded"></div></div><p>&nbsp;</p></li>
-      
-          
+          <li>To turn the room off, find the control labelled <strong>Quit/Shutdown</strong> and tap it.</li>
+          <li>If control panel appears not to be reposive to your touch, try again, but more slowly. Tap and hold for 3 seconds.</li>
         </ol>
       </div>
     </div>
