--- a/guides/als-draft.html
+++ b/guides/als-draft.html
@@ -96,7 +96,7 @@ body { padding-top: 100px; }
             <div class="col-lg-8 col-md-8 col-sm-10 col-xs-10">
               <img src="https://04a4fd5b8e9010ec524923a293510c973c1291c9.googledrive.com/host/0B5e4Smfyuda_d01lc0xUQmJURWc/ALS/als-bing-204-power.png" class="img-responsive img-rounded"></div></div><p>&nbsp;</p></li>
           <li>To turn the room off, find the control labelled <strong>Quit/Shutdown</strong> and tap it.</li>
-          <li>If control panel appears not to be reposive to your touch, try again, but more slowly. Tap and hold for 3 seconds.</li>
+          <li>If control panel does not respond to your touch, try again, but more slowly. Tap and hold for 3 seconds.</li>
         </ol>
       </div>
     </div>
