edits for ALS draft

--- a/guides/als-draft.html
+++ b/guides/als-draft.html
@@ -225,7 +225,7 @@ body { padding-top: 100px; }
 <hr>
 
 <div class="pull-right">
-<p><span class="copy-left">&copy;</span> 2015, Case Western Reserve University</p>
+<p>&copy; 2015, Case Western Reserve University</p>
 </div>
 <div class="clearfix"></div>
 </div>
