edits for DUO (for simplicity)

--- a/guides/duo-guide-refactor.html
+++ b/guides/duo-guide-refactor.html
@@ -87,7 +87,7 @@ body { padding-top: 100px; }
 
   <p>&nbsp;</p>    
   <p><strong>NOTE:</strong> ITS Information Security recommends you use your desk phone as a backup in the case that a mobile phone is lost, stolen or damaged.</p> 
-  <p>However, because Case Duo lets you link multiple devices to your account, you may use any combination of compatible devices (e.g., a landline and a hardware token, two different mobile devices, tablet and a landline, etc.)</p>
+  <p>However, Case Duo lets you link multiple devices to your account, and you may use any combination of compatible devices to secure it.</p>
   </div>
 </div>
 
@@ -122,7 +122,7 @@ body { padding-top: 100px; }
     <li>Blackberry devices</li>
     <li>Windows phones</li>
     <li>Basic cell phones with and without text msg capabilities</li>
-    <li>Landlines, Softphones, etc.</li>
+    <li>Landlines</li>
     <li>Hardware tokens (e.g., Yubikey - enrolled by administrator)</li>
   </ul>
 
@@ -398,8 +398,11 @@ body { padding-top: 100px; }
       <li>VPN connection completed.</li>
     </ol>
   <p>&nbsp;</p>
-  <p>Although it is possible to call any phone number in your profile (e.g., type "phone2", "phone3", etc.) a more practical solution is to use the <strong>Manage Devices</strong> screen to change the order of your devices so that your voice-only phone (e.g., landline) appears <strong>before</strong> your basic cell phone and smartphone. This way, you do not need to remember the order of devices to reliably authenticate with your preferred method when using a multi-device account.</p>
-  <p><strong>NOTE:</strong> Because hardware tokens and tablets do not typically have an associated phone number, it does not matter where in the order of devices they appear in your profile. However, a basic cell phone should precede a smartphone, and follow a landline.</p>
+  <strong>Notes for multi-device accounts</strong>
+  <p>It's possible to call any phone number in your profile by typing "phone" and its number in series (i.e., "phone2").</p>
+  <p>However, if you use the <strong>Manage Devices</strong> screen to change the order of your devices so that your voice-only phone (e.g., landline) appears <strong>before</strong> your basic cell phone and smartphone, you'll not need to remember the order of devices to authenticate by the preferred method when using a multi-device account.</p>
+  <p>Because hardware tokens are not associated with a phone number, it does not matter where in the order of devices they appear. However, a basic cell phone should precede a smartphone, and follow a landline.</p>
+  <p>Also, if you use the mobile application with both a smartphone and tablet, the device you'll use to authenticate more often should appear first.</p>
   </div>
 </div>
 </div>
@@ -427,8 +430,11 @@ body { padding-top: 100px; }
       <li>VPN connection completed.</li>
     </ol>
   <p>&nbsp;</p>
-  <p>Although it is possible to send SMS codes to any compatible device in your profile (e.g., type "SMS2", "SMS3", etc.), a more practical solution is to use the <strong>Manage Devices</strong> screen to change the order of your devices so that your basic cell phone appears <strong>before</strong> your your smartphone, but after a landline. This way, you do not need to remember the order of devices to reliably authenticate with your preferred method when using a multi-device account.</p>
-  <p><strong>NOTE:</strong> Because hardware tokens and tablets do not typically have an associated phone number, it does not matter where in the order of devices they appear in your profile.</p>
+  <strong>Notes for multi-device accounts</strong>
+  <p>It's possible to send SMS codes to any compatible device in your profile by typing "SMS" and its number in series (i.e., "SMS2").</p>
+  <p>However, if you use the <strong>Manage Devices</strong> screen to change the order of your devices so that your basic cell phone appears <strong>before</strong> your your smartphone (but <strong>after</strong> any landline) you'll not need to remember the order of devices to authenticate by the preferred method when using a multi-device account.</p>
+  <p>Because hardware tokens are not associated with a phone number, it does not matter where in the order of devices they appear. However, a basic cell phone should precede a smartphone, and follow a landline.</p>
+  <p>Also, if you use the mobile application with both a smartphone and tablet, the device you'll use to authenticate more often should appear first.</p>
   </div>
 </div>
 </div>
