edits for DUO (for simplicity)

--- a/guides/duo-guide-refactor.html
+++ b/guides/duo-guide-refactor.html
@@ -297,10 +297,10 @@ body { padding-top: 100px; }
   <tr>
     <th><span style="font-weight:normal;">Device</span></th>
     <th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
-    <th>Duo Push *</th>
+    <th>Duo Push</th>
     <th>Passcode</th>
     <th>Voice Call</th>
-    <th>Text Message (SMS)</th>
+    <th>SMS</th>
   </tr>
 </thead>
 
@@ -320,6 +320,7 @@ body { padding-top: 100px; }
 </tbody>
 </table>
 
+  <p>&nbsp;</p>
 
 <div class="row">
 <div class="col-md-12 col-sm-12">
@@ -343,7 +344,7 @@ body { padding-top: 100px; }
       <li>VPN connection completed.</li>
     </ol>
   <p>&nbsp;</p>
-  <p>If you receive a login request on your phone or tablet that you did not request, Tap the red <strong>Deny</strong> button and then choose "It seems fraudulent" when prompted to alert <strong>Information Security</strong>. It is possible that your password has been compromised.</p>
+  <p><mark>IMPORTANT</mark> If you receive a login request on your phone or tablet that you did not request, tap the red <strong>Deny</strong> button and then choose "It seems fraudulent" when prompted to alert <strong>Information Security</strong>. It is possible that your password has been compromised.</p>
   </div>
 </div>
 </div>
@@ -397,12 +398,6 @@ body { padding-top: 100px; }
       <li>The network Acceptable Use Banner displays on your computer screen. Click <strong>Accept</strong> to finish.</li>
       <li>VPN connection completed.</li>
     </ol>
-  <p>&nbsp;</p>
-  <strong>Notes for multi-device accounts</strong>
-  <p>It's possible to call any phone number in your profile by typing "phone" and its number in series (i.e., "phone2").</p>
-  <p>However, if you use the <strong>Manage Devices</strong> screen to change the order of your devices so that your voice-only phone (e.g., landline) appears <strong>before</strong> your basic cell phone and smartphone, you'll not need to remember the order of devices to authenticate by the preferred method when using a multi-device account.</p>
-  <p>Because hardware tokens are not associated with a phone number, it does not matter where in the order of devices they appear. However, a basic cell phone should precede a smartphone, and follow a landline.</p>
-  <p>Also, if you use the mobile application with both a smartphone and tablet, the device you'll use to authenticate more often should appear first.</p>
   </div>
 </div>
 </div>
@@ -429,12 +424,6 @@ body { padding-top: 100px; }
       <li>The network Acceptable Use Banner displays on your computer screen. Click <strong>Accept</strong> to finish.</li>
       <li>VPN connection completed.</li>
     </ol>
-  <p>&nbsp;</p>
-  <strong>Notes for multi-device accounts</strong>
-  <p>It's possible to send SMS codes to any compatible device in your profile by typing "SMS" and its number in series (i.e., "SMS2").</p>
-  <p>However, if you use the <strong>Manage Devices</strong> screen to change the order of your devices so that your basic cell phone appears <strong>before</strong> your your smartphone (but <strong>after</strong> any landline) you'll not need to remember the order of devices to authenticate by the preferred method when using a multi-device account.</p>
-  <p>Because hardware tokens are not associated with a phone number, it does not matter where in the order of devices they appear. However, a basic cell phone should precede a smartphone, and follow a landline.</p>
-  <p>Also, if you use the mobile application with both a smartphone and tablet, the device you'll use to authenticate more often should appear first.</p>
   </div>
 </div>
 </div>
@@ -465,6 +454,14 @@ body { padding-top: 100px; }
 </div>
 </div>
 </div>
+
+
+<h3>Notes for Multi-Device Accounts</h3>
+
+<p>It's possible to call or send SMS codes to any compatible device in your profile by typing "PHONE" or SMS" and its number in series (e.g., "SMS2", "PHONE2") in the <strong>Second Password</strong> box.</p>
+<p>However, if you use the <strong>Manage Devices</strong> screen to change the order of your devices so that your basic cell phone appears <strong>before</strong> your your smartphone (but <strong>after</strong> any landline) you'll not need to remember the order of devices to authenticate by the preferred method when using a multi-device account.</p>
+<p>Because hardware tokens are not associated with a phone number, it does not matter where in the order of devices they appear. However, a basic cell phone should precede a smartphone, and follow a landline.</p>
+<p>Also, if you use the mobile application with both a smartphone and tablet, the device you'll use to authenticate more often should appear first.</p>
 
 <hr>
 
