edits for DUO (for simplicity)

--- a/guides/duo-guide-refactor.html
+++ b/guides/duo-guide-refactor.html
@@ -344,7 +344,8 @@ body { padding-top: 100px; }
       <li>VPN connection completed.</li>
     </ol>
   <p>&nbsp;</p>
-  <p><mark>IMPORTANT</mark> If you receive a login request on your phone or tablet that you did not request, tap the red <strong>Deny</strong> button and then choose "It seems fraudulent" when prompted to alert <strong>Information Security</strong>. It is possible that your password has been compromised.</p>
+  <p><mark>IMPORTANT</mark> If you receive a login request on your phone or tablet that you did not request, tap the red <strong>Deny</strong> button and then choose "It seems fraudulent" when prompted to alert <strong>Information Security</strong>.</p>
+  <p>It is possible that your password has been compromised.</p>
   </div>
 </div>
 </div>
@@ -460,8 +461,9 @@ body { padding-top: 100px; }
 
 <p>It's possible to call or send SMS codes to any compatible device in your profile by typing "PHONE" or SMS" and its number in series (e.g., "SMS2", "PHONE2") in the <strong>Second Password</strong> box.</p>
 <p>However, if you use the <strong>Manage Devices</strong> screen to change the order of your devices so that your basic cell phone appears <strong>before</strong> your your smartphone (but <strong>after</strong> any landline) you'll not need to remember the order of devices to authenticate by the preferred method when using a multi-device account.</p>
-<p>Because hardware tokens are not associated with a phone number, it does not matter where in the order of devices they appear. However, a basic cell phone should precede a smartphone, and follow a landline.</p>
-<p>Also, if you use the mobile application with both a smartphone and tablet, the device you'll use to authenticate more often should appear first.</p>
+<p>Also, if you use the mobile application with both a smartphone and tablet, the device you'll use to authenticate more often should appear <strong>first</strong>.</p>
+<p>Because hardware tokens are not associated with a phone number, it does not matter where in the order of devices they appear.</p>
+
 
 <hr>
 
