stuff and wiggles

--- a/guides/duo-guide-refactor.html
+++ b/guides/duo-guide-refactor.html
@@ -463,7 +463,7 @@ body { padding-top: 100px; }
 <p>However, if you use the <strong>Manage Devices</strong> screen to change the order of your devices so that your basic cell phone appears <strong>before</strong> your your smartphone (but <strong>after</strong> any landline) you'll not need to remember the order of devices to authenticate by the preferred method when using a multi-device account.</p>
 <p>Also, if you use the mobile application with both a smartphone and tablet, the device you'll use to authenticate more often should appear <strong>first</strong>.</p>
 <p>Because hardware tokens are not associated with a phone number, it does not matter where in the order of devices they appear.</p>
-
+<p>To access the <strong>Manage Devices</strong> screen, first enroll at least one device. The enrollment page now features a gray button marked <strong>Manage devices</strong>. Click this and then authenticate. The management screen opens after succesful authentication.</p>
 
 <hr>
 
