--- a/guides/duo-guide-refactor.html
+++ b/guides/duo-guide-refactor.html
@@ -69,6 +69,8 @@ body { padding-top: 100px; }
 
 <p class="lead"><strong>Two-factor authentication</strong> adds a second layer of security to your online CWRU accounts. Verifying your identity using a <strong>second factor</strong> (like your phone or other mobile device) prevents anyone but you logging in, even if they know your password.</p>
 
+<p class="lead">For more help, call the Service Desk at <a href="tel:1-216-368-4357">(216) 368-<strong>HELP</strong> (4357)</a>.</p>
+
 <p>&nbsp;</p>
 
 <div class="row">
@@ -86,7 +88,7 @@ body { padding-top: 100px; }
     </ul>
 
   <p>&nbsp;</p>    
-  <p><strong>NOTE:</strong> ITS Information Security recommends you use your desk phone as a backup in the case that a mobile phone is lost, stolen or damaged.</p> 
+  <p><mark>IMPORTANT</mark> ITS Information Security recommends you use your desk phone as a backup in the case that a mobile phone is lost, stolen or damaged.</p> 
   <p>However, Case Duo lets you link multiple devices to your account, and you may use any combination of compatible devices to secure it.</p>
   </div>
 </div>
@@ -106,7 +108,6 @@ body { padding-top: 100px; }
       <li><a href="https://www.case.edu/its/information-security/">ITS Information Security home page</a></li>
       <li><a href="http://www.lynda.com/1Password-tutorials/Computer-Security-Internet-Safety-Fundamentals/174234-2.html?org=case.edu">Computer Security and Internet Safety Fundamentals (Lynda.com) [video]</a></li>
     </ul>
-    <p>For more help, call the Service Desk at <a href="tel:1-216-368-4357">(216) 368-<strong>HELP</strong> (4357)</a>.</p>
   </div>
 </div>
 
