--- a/scripts/presidentsoffice-rackspace.html
+++ b/scripts/presidentsoffice-rackspace.html
@@ -12,7 +12,7 @@
 h2 { padding-top: 30px; }
 h3 { padding-top: 20px; }
 
-.copy-left {
+/*.copy-left {
   display: inline-block;
   text-align: right;
   margin: 0;
@@ -22,7 +22,7 @@ h3 { padding-top: 20px; }
  transform: scaleX(-1);
  filter: FlipH;
  -ms-filter: "FlipH";
- }
+ }*/
 
 </style>
 
@@ -96,12 +96,7 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
 
 <h2 id="how-to-escalate">How to Escalate</h2>
 <p><mark>Exchange (hosted at Rackspace)</mark> is not considered a critical service. However, because this service is only offered to VIP customers, all incidents receive high-priority treatment.</p>
-<p>Escalations are available whenever requested, including during planned university closures and recognized university holidays.</p>
-<p>During unplanned university closures escalations may NOT be available.</p>
-<p>Classify the reason for escalation as one of the following; Confirmed Outage (total or partial), Suspected Outage (total or partial), Abend, Slow response time, User Requirements not met, Other functional or Other technical.</p>
-
-
-<p>Escalation not available.</p>
+<p>Escalations are available whenever requested, including during planned university closures and recognized holidays. During unplanned university closures escalations may NOT be available.</p>
 
 <hr>
 
@@ -127,124 +122,10 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
   </ol>
 
   
-
-
-
-
 <h2>Move + Change</h2>
 <p>This space left blank intentionally</p>
-
 <h2>How-to + Training</h2>
-
-
-
-<h3 id="find-guide-ios">Find a Guide, iOS</h3>
-  <p>back to <a href="#">top</a> </p>
-
-  <ol>
-  <li>Gather resolution information and enter it into the ticket.</li>
-  <li>Open the Guidebook app on your device.</li>
-  <li>Use the Search box at the top of the screen to search for your guide by name ("Case Western Reserve University Orientation 2015", use partial for search).</li>
-  <li>Choose desired guide from the results and tap "Get this Guide" to download it.</li>
-  <li>Resolve ticket.</li>
-  </ol>
-
-<h3 id="find-guide-android">Find a Guide, Android</h3>
-  <p>back to <a href="#">top</a> </p>
-
-  <ol>
-  <li>Gather resolution information and enter it into the ticket.</li>
-  <li>Open the Guidebook app on your device.</li>
-  <li>Use the Search box at the top of the screen to search for your guide by name ("Case Western Reserve University Orientation 2015", use partial for search).</li>
-  <li>Choose desired guide from the results and tap "Get this Guide" to download it.</li>
-  <li>If your event organizer has provided a QR code to scan the guide, you can select the scan option. Center your camera on the QR code icon at the end of the Search bar, and it will automatically scan the code and take you to the guide.</li>
-  <li>Resolve ticket.</li>
-  </ol>
-
-<h3 id="find-guide-other">Find a Guide, Other</h3>
-  <p>back to <a href="#">top</a> </p>
-
-  <ol>
-  <li>Gather resolution information and enter it into the ticket.</li>
-  <li>Go to guidebook.com/browse/ on your device's internet browser.</li>
-  <li>Click the search bar below "Select a Category".</li>
-  <li>Use the Search box at the top of the screen to search for your guide by name ("Case Western Reserve University Orientation 2015", use partial for search).</li>
-  <li>Choose desired guide from the results and tap its name to download it.</li>
-  <li>Resolve ticket.</li>
-  </ol>
-
-<h3 id="navigation">General Navigation</h3>
-  <p>back to <a href="#">top</a> </p>
-
-  <ol>
-  <li>Gather resolution information and enter it into the ticket.</li>
-  <li>For iOS devices: Swipe the screen from right to left to access additional pages of icons and content. If there are no more pages, swiping will have no effect.</li>
-  <li>For Android: Tap the icon (three lines) in the top left of your screen to access the content drawer. Scroll down to see all guide icons and content.</li>
-  <li>For devices that have a hardware "search" button (typically a magnifying glass icon): Tap this button while in the app to perform a search.</li>
-  <li>For devices lacking a "search" button, but containing a "Menu" button: Tap the "Menu" icon to load the contextual menu and then select "Search Guide" to perform a search.</li>
-  <li>For devices with neither of the above: Tap the contextual menu button on the top right-hand side of the screen (looks like three squares stacked vertically). Then tap "Search Guide".</li>
-  <li>All other devices: Scroll down to view the icons and content within the guide. Use the web browser's built-in back button to navigate back within a guide, and use the built-in "Find" function to search for any information on page.</li>
-  <li>Resolve ticket.</li>
-  </ol>
-
-<!-- <h3 id="features-general-info">General Info</h3>
-  <p>back to <a href="#">top</a> </p>
-
-  <ol>
-  <li>Gather resolution information and enter it into the ticket.</li>
-  <li>icon</li>
-  <li> Click here to view high-level details about the event. Depending on your event organizer, this section may contain a welcome letter as well as a quick link to the main venue of the event.</li>
-  <li>Resolve ticket.</li>
-  </ol> -->
-
-<h3 id="features-schedule">Schedule and Schedule Tracks</h3>
-  <p>back to <a href="#">top</a> </p>
-
-  <ol>
-  <li>Gather resolution information and enter it into the ticket.</li>
-  <li>The application home screen contains both the full program schedules (i.e., Parent and Family Orientation) and individual schedule tracks (i.e., Parents and Families of Mistletoe).</li>
-  <li>Sessions may be color coded to denote specific tracks and audiences for the sessions.</li>
-  <li>A schedule track functions identically to the full schedule.</li>
-  <li>The track exists as a segmented version of the larger schedule, tailored specifically to a particular sub-group of the orientation.</li>
-  <li>CWRU recommends that users refer to both for the best experience.</li> 
-  <li>Tap the schedule name to view it.</li>
-  <li>Resolve ticket.</li>
-  </ol>
-
-<h3 id="features-my-schedule">My Schedule</h3>
-  <p>back to <a href="#">top</a> </p>
-
-  <ol>
-  <li>Gather resolution information and enter it into the ticket.</li>
-  <li>Create a personalized schedule, with reminders, from any of the existing sessions in the application.</li>
-  <li>To add an item to your schedule:
-    <ul>
-        <li>Open any schedule in the app.</li>
-        <li>iOS: Swipe a session to add the session to your personalized schedule.</li>
-        <li>Android: Tap and hold a session to add the session to your personalized schedule.</li>
-    </ul></li>
-  <li>Alternatively, open any session and navigate to the bottom of your screen. Click "Add to My Schedule".</li>
-  <li>Resolve ticket.</li>
-  </ol>
-
-<h3 id="features-to-do">To-do List</h3>
-  <p>back to <a href="#">top</a> </p>
-
-  <ol>
-  <li>Gather resolution information and enter it into the ticket.</li>
-  <li>Create a personalized to-do list from any existing list items in your app or your own custom entries.
-  <li>To add an item to your todo list:
-    <ul>
-        <li>Open any list in the app.</li>
-        <li>iOS: Swipe an item to add it to your to-do list.</li>
-        <li>Android: Tap and hold an item to add it to your to-do list.</li>
-    </ul></li>
-  <li>Alternatively, you can tap into a list item and navigate to the bottom of your screen. Click "Add to To-Do".</li>
-  <li>Tap an item to cross it off your to-do list.</li>
-  <li>Resolve ticket.</li>
-  </ol>
-
-
+<p>This space left blank intentionally</p>
 <h2>Billing</h2>
 <p>This space left blank intentionally</p>
 <h2>Unable to Resolve</h2>
@@ -255,7 +136,7 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
 <hr>
 
 <div class="pull-right">
-<p><span class="copy-left">&copy;</span> 2015, Case Western Reserve University</p>
+<p>&copy; 2015, Case Western Reserve University</p>
 </div>
 <div class="clearfix"></div>
 </div>
