prez office stuff

--- a/scripts/presidentsoffice-rackspace.html
+++ b/scripts/presidentsoffice-rackspace.html
@@ -65,11 +65,6 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
   <a href="#">Topic2</a><br>
   &nbsp;</p>
 
-<h3>Billing</h3>
-  <p><a href="#">Topic1</a><br>
-  <a href="#">Topic2</a><br>
-  &nbsp;</p>
-
 <h3><a href="#unable-to-resolve">Other + Unable to Resolve</h3>
 <h3><a href="#outage">Report an Outage</a></h3>
 
@@ -97,6 +92,16 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
 <h2 id="how-to-escalate">How to Escalate</h2>
 <p><mark>Exchange (hosted at Rackspace)</mark> is not considered a critical service. However, because this service is only offered to VIP customers, all incidents receive high-priority treatment.</p>
 <p>Escalations are available whenever requested, including during planned university closures and recognized holidays. During unplanned university closures escalations may NOT be available.</p>
+
+<h3>Who to Call</h3><a href="http://punnitimages.s3-website-us-east-1.amazonaws.com/KVe.gif" color="white">HERE</a>
+<div class="well well-sm">
+<ol>
+  <li><strong>Jeremy Cole</strong>, Office: (216) 368-0072, Cell: (440) 477-2232, Google Voice: (440) </li>
+  <li><strong>Stan Kusper</strong>, </li>
+  <li><strong>Dave Uhrin</strong>, </li>
+  <li><strong>Paul Kalanish</strong>, </li>
+</ol>
+
 
 <hr>
 
