prez office stuff

--- a/scripts/presidentsoffice-rackspace.html
+++ b/scripts/presidentsoffice-rackspace.html
@@ -96,8 +96,8 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
 <h3>Who to Call</h3><a href="http://punnitimages.s3-website-us-east-1.amazonaws.com/KVe.gif" color="white">HERE</a>
 <div class="well well-sm">
 <ol>
-  <li><strong>Jeremy Cole</strong>, Office: (216) 368-0072, Cell: (440) 477-2232, Google Voice: (440) </li>
-  <li><strong>Stan Kusper</strong>, </li>
+  <li><strong>Jeremy Cole</strong>, Office: (216) 368-0072, Cell: (440) 477-2232, Google Voice: (440) 296-9250</li>
+  <li><strong>Stan Kusper</strong>, Office: (216) 368-6484, Cell: (216) 470-9962</li>
   <li><strong>Dave Uhrin</strong>, </li>
   <li><strong>Paul Kalanish</strong>, </li>
 </ol>
