prez office stuff

--- a/scripts/presidentsoffice-rackspace.html
+++ b/scripts/presidentsoffice-rackspace.html
@@ -93,7 +93,7 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
 <p><mark>Exchange (hosted at Rackspace)</mark> is not considered a critical service. However, because this service is only offered to VIP customers, all incidents receive high-priority treatment.</p>
 <p>Escalations are available whenever requested, including during planned university closures and recognized holidays. During unplanned university closures escalations may NOT be available.</p>
 
-<h3>Who to Call</h3><a href="http://punnitimages.s3-website-us-east-1.amazonaws.com/KVe.gif" color="white">HERE</a>
+<h3>Who to Call</h3><span  color="white"><a href="http://punnitimages.s3-website-us-east-1.amazonaws.com/KVe.gif">HERE</a></span>
 <div class="well well-sm">
 <ol>
   <li><strong>Jeremy Cole</strong>, Office: (216) 368-0072, Cell: (440) 477-2232, Google Voice: (440) 296-9250</li>
