prez office stuff

--- a/scripts/presidentsoffice-rackspace.html
+++ b/scripts/presidentsoffice-rackspace.html
@@ -101,7 +101,7 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
   <li><strong>Dave Uhrin</strong>, </li>
   <li><strong>Paul Kalanish</strong>, </li>
 </ol>
-
+</div>
 
 <hr>
 
