prez office stuff

--- a/scripts/presidentsoffice-rackspace.html
+++ b/scripts/presidentsoffice-rackspace.html
@@ -56,9 +56,24 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
   &nbsp;</p>
 
 <h3>Activate + Setup + Install</h3>
-  <p><a href="#">Topic1</a><br>
-  <a href="#">Topic2</a><br>
+  <p><strong>Android (device-specific)</strong><br>
+  <a href="#android-sony">Sony</a><br>
+  <a href="#android-nexus">Nexus</a><br>
+  <a href="#android-htc">HTC</a><br>
+  <a href="#android-motorola">Motorola</a><br>
+  <a href="#android-samsung">Samsung</a><br>
+  <a href="#android-lg">LG</a><br>
   &nbsp;</p>
+  <p><strong>Apple</strong><br>
+  <a href="#apple-ios">iOS</a><br>
+  <a href="#apple-macmail">Mac Mail</a><br>
+  &nbsp;</p>
+  <p><strong>Windows</strong><br>
+  <a href="#windows-mobile">Windows Mobile</a><br>
+  <a href="#outlook">Outlook (2007,2010,2013)</a><br>
+  &nbsp;</p>
+  <p><a href="#other-setup">Other Clients</a></p>
+
 
 <h3>How-to + Training</h3>
   <p><a href="#">Topic1</a><br>
@@ -98,8 +113,8 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
 <ol>
   <li><strong>Jeremy Cole</strong>, Office: (216) 368-0072, Cell: (440) 477-2232, Google Voice: (440) 296-9250</li>
   <li><strong>Stan Kusper</strong>, Office: (216) 368-6484, Cell: (216) 470-9962</li>
-  <li><strong>Dave Uhrin</strong>, </li>
-  <li><strong>Paul Kalanish</strong>, </li>
+  <li><strong>Dave Uhrin</strong>, Office: (216) 368-5674, Cell:</li>
+  <li><strong>Paul Kalanish</strong>, Office: (216) 368-5911, Cell: </li>
 </ol>
 </div>
 
@@ -110,19 +125,126 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
 
 <h2>Activate + Setup + Install</h2>
 
-<h3 id="install">Install Guidebook</h3>
+
+<h3 id="android-sony">Sony</h3>
+  <p>back to <a href="#">top</a> </p>
+  <p>This is a setup guide that will assist you in setting up your
+Hosted Exchange Mailbox on Sony Experia mobile and
+tablet devices using ActiveSync.</p>
+
+<ol>
+  <li>Gather resolution information and enter it into the ticket.</li>
+  <li>Locate the "Settings" icon within your Apps Drawer.</li>
+  <li>Within Settings, scroll down to "Accounts" and select "Add account".</li>
+  <li>Select "Corporate".</li>
+  <li>Enter the following information:</li>
+      <ul>
+        <li>"Email Address": ruthless@securityaware.case.edu</li>
+        <li>"Password": Your mailbox password</li>
+      </ul>
+  <li>Tap "Next".</li>
+  <li>Enter the following information:</li>
+      <ul>
+        <li>"Domain\Username": ruthless@securityaware.case.edu</li>
+        <li>"Password": Your mailbox password</li>
+        <li>"Server": mex08.emailsrvr.com</li>
+        <li>"Use secure connection (SSL)": Checked</li>
+      </ul>
+  <li> Tap "Next".
+  <li> If prompted with the Remove security administration alert, select "Ok" to proceed.</li>
+  <li> Within the "Account Settings" screen, adjust the items you wish to sync.</li>
+  <li> Success! Your Sony device should now begin syncing with your mailbox.</li>
+  <li>Resolve ticket.</li>
+</ol>
+
+
+
+<h3 id="android-nexus">Nexus</h3>
   <p>back to <a href="#">top</a> </p>
 
   <ol>
   <li>Gather resolution information and enter it into the ticket.</li>
-  <li>iOS, Android, Blackerry 10+: Use ANY of the following methods to download and install Guidebook. Follow on-screen prompts to complete.</li>
-    <ul>
-    <li>Scan QR code provided with orientation materials.</li>
-    <li>Navigate to guidebook.com/getit on your device's web browser.</li>
-    <li>Go to your device app store and search for "Guidebook".</li>
-    </ul>
-  <li>Desktop, Windows Phone, non-Blackberry 10+, other: Navigate to guidebook.com and browse using your web browser.</li>
-  <li>If user is still having problems, direct to firstyearexperience@case.edu.</li>
+  <li>Resolve ticket.</li>
+  </ol>
+
+
+<h3 id="android-htc">HTC</h3>
+  <p>back to <a href="#">top</a> </p>
+
+  <ol>
+  <li>Gather resolution information and enter it into the ticket.</li>
+  <li>Resolve ticket.</li>
+  </ol>
+
+
+<h3 id="android-motorola">Motorola</h3>
+  <p>back to <a href="#">top</a> </p>
+
+  <ol>
+  <li>Gather resolution information and enter it into the ticket.</li>
+  <li>Resolve ticket.</li>
+  </ol>
+
+
+<h3 id="android-samsung">Samsung</h3>
+  <p>back to <a href="#">top</a> </p>
+
+  <ol>
+  <li>Gather resolution information and enter it into the ticket.</li>
+  <li>Resolve ticket.</li>
+  </ol>
+
+
+<h3 id="android-lg">LG</h3>
+  <p>back to <a href="#">top</a> </p>
+
+  <ol>
+  <li>Gather resolution information and enter it into the ticket.</li>
+  <li>Resolve ticket.</li>
+  </ol>
+
+
+<h3 id="apple-ios">iOS</h3>
+  <p>back to <a href="#">top</a> </p>
+
+  <ol>
+  <li>Gather resolution information and enter it into the ticket.</li>
+  <li>Resolve ticket.</li>
+  </ol>
+
+
+<h3 id="apple-macmail">Mac Mail</h3>
+  <p>back to <a href="#">top</a> </p>
+
+  <ol>
+  <li>Gather resolution information and enter it into the ticket.</li>
+  <li>Resolve ticket.</li>
+  </ol>
+
+
+<h3 id="windows-mobile">Windows Mobile</h3>
+  <p>back to <a href="#">top</a> </p>
+
+  <ol>
+  <li>Gather resolution information and enter it into the ticket.</li>
+  <li>Resolve ticket.</li>
+  </ol>
+
+
+<h3 id="outlook">Outlook (2007,2010,2013)</h3>
+  <p>back to <a href="#">top</a> </p>
+
+  <ol>
+  <li>Gather resolution information and enter it into the ticket.</li>
+  <li>Resolve ticket.</li>
+  </ol>
+
+
+<h3 id="other-setup">Other Clients</h3>
+  <p>back to <a href="#">top</a> </p>
+
+  <ol>
+  <li>Gather resolution information and enter it into the ticket.</li>
   <li>Resolve ticket.</li>
   </ol>
 
